Issue #3450844 by Eduardo Morales Alberti: Yotpo Drupal 10

--- a/yotpo.services.yml
+++ b/yotpo.services.yml
@@ -4,7 +4,9 @@ services:
     arguments: [
       '@config.factory',
       '@logger.channel.yotpo',
-      '@http_client_factory'
+      '@http_client_factory',
+      '@cache.default',
+      '@datetime.time',
     ]
 
   logger.channel.yotpo:
