--- a/yotpo.info.yml
+++ b/yotpo.info.yml
@@ -2,5 +2,6 @@ name: Yotpo API Integration
 type: module
 description: Client to connect with Yotpo API
 package: Development
-core_version_requirement: ^10
+core_version_requirement: ^10.2
+php: 8.1
 dependencies: [ ]
